--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bubble Gum Simulator INFINITY – Release</title>
+
+    <!-- Open Graph Meta Tags (for Discord and other platforms) -->
+    <meta property="og:title" content="Bubble Gum Simulator INFINITY – Release" />
+    <meta property="og:description" content="Bubble Gum Simulator INFINITY is out now! Play now and experience the bubble popping fun!" />
+    <meta property="og:image" content="https://i.imgur.com/51Jh9Z3.png" />
+    <meta property="og:url" content="https://urmoit.github.io/bgsi-release-date-countdown/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Bubble Gum Simulator INFINITY" />
+  
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@TanUrmo" />
+    <meta name="twitter:title" content="Bubble Gum Simulator INFINITY – Release" />
+    <meta name="twitter:description" content="Bubble Gum Simulator INFINITY is out now! Play now and experience the bubble popping fun!" />
+    <meta name="twitter:image" content="https://i.imgur.com/51Jh9Z3.png" />
+    <meta name="twitter:url" content="https://urmoit.github.io/bgsi-release-date-countdown/" />
+
   <style>
     * {
       margin: 0;
