--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
       margin-bottom: 15px;
     }
 
+    /* Announcement */
+    .announcement {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 12px 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-size: 0.95rem;
+    line-height: 1.4;
+    z-index: 999;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    max-width: 100%;
+    width: fit-content;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 2rem;
@@ -164,6 +184,7 @@
       }
     }
 
+    /* Credit */
     .credit {
       position: fixed;
       bottom: 10px;
