--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <div class="dev-blog-post">
       <h3>Dev Blog #1: Easter Event</h3>
-      <p>X</p>
+      <p>Easter Event</p>
       <button onclick="window.location.href='DevBlogPages/devblog1.html'">Read More</button>
     </div>
   </div>
